# Finale

./: .gitignore  CMakeLists.txt  README.md  key_info.yaml  main.c
cmake/: Findlibgtest.cmake
compile/: compile.c  compile.h
debug/: color_print.h
gc/: gc.c  gc.h
include/: common.h  unicode.c  utils.c  utils.h
llt/: CMakeLists.txt  finale_llt.sh  main_ut.cpp  object.cpp  system_lib.cpp
object/: class.c  class.h  header_obj.c  header_obj.h
object/class/: meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
output/: boot_test.sh
output/lex/: finale_lex
parser/: parser.c  parser.h
script/: output_info.c  vscode_setting.ts
vm/: core.c  core.h  core.script.inc  opcode.inc  vm.c  vm.h
